added details of products

--- a/index.html
+++ b/index.html
@@ -280,7 +280,8 @@
                     <!-- Content -->
                     <div class="col-md-5 col-md-pull-7 center-md">
                         <h2 class="m-b-md">IP CAMERA</h2>
-                        <p>Stream live video on your phone.Its 180˚ camera displays crystal-clear video day or night.Speak directly with visitors via built-in mic and speaker.Record continuous footage and browse your entire video history minute by minute.View recordings from anywhere with just one app</p>
+                        <p>Stream live video on your phone.Its 180˚ camera displays crystal-clear video day or night.Speak directly with visitors via built-in mic and speaker.Record continuous footage and browse your entire video history minute by minute.View recordings from anywhere with just one app.It is compatible with iOS and Android devices
+                        </p>
                         <!-- <a href="" class="btn btn-shadow btn-green btn-md m-t-md text-uppercase">Start your free trial</a> -->
                     </div>
                 </div>
