--- a/products.html
+++ b/products.html
@@ -296,7 +296,7 @@
                     <!-- Content -->
                     <div class="col-md-5 center-md">
                         <h2 class="m-b-md" src="images/uploads/Screenshot from 2016-07-07 16:56:04.png" style="color: rgb(105, 105, 110); font-size: 30px; font-weight: 900; background-color: rgba(0, 0, 0, 0);">IP CAMERA</h2>
-                        <p>Stream live video on your phone.Its 180˚ camera displays crystal-clear video day or night.Speak directly with visitors via built-in mic and speaker.Record continuous footage and browse your entire video history minute by minute.View recordings from anywhere with just one app.Alerts and notifications to your mobile device so you always know what’s going on at home.Infrared technology ensures your camera is never left in the dark</p>
+                        <p>Stream live video on your phone.Its 180˚ camera displays crystal-clear video day or night.Speak directly with visitors via built-in mic and speaker.Record continuous footage and browse your entire video history minute by minute.View recordings from anywhere with just one app.Alerts and notifications to your mobile device so you always know what’s going on at home.Infrared technology ensures your camera is never left in the dark. Keep an eye on your kids and pets, screen visitors at your entranceway and view activity occurring around the interior or exterior of your home whenever and wherever you want.</p>
                     </div>
                 </div>
                 <!-- /End Row -->
@@ -308,12 +308,12 @@
                 <div class="row features-block y-middle">
                     <!-- Device Image -->
                     <div class="col-md-7 col-md-push-5 text-center m-b-md wow fadeInRight" style="visibility: visible; animation-name: fadeInRight;">
-                        <img src="images/uploads/motiondetector.jpg" alt="" style="border-radius: 0px; border: 1px none rgb(105, 105, 110);">
+                        <img src="img/motion.jpg" alt="" style="border-radius: 0px; border: 1px none rgb(105, 105, 110);">
                     </div>
                     <!-- Content -->
                     <div class="col-md-5 col-md-pull-7 center-md">
                         <h2 class="m-b-md" style="color: rgb(105, 105, 110); font-weight: 900; font-size: 30px; background-color: rgba(0, 0, 0, 0);" src="images/uploads/motiondetector.jpg">Motion detector</h2>
-                        <p>Using infrared technology, your maple motion detector features a 90 degree look-down, ensuring intruders cannot pass by unnoticed.
+                        <p>Using infrared technology, your maple motion detector features a 90 degree look-down, ensuring intruders cannot pass by unnoticed. They are designed to react when the temperature rises rapidly, meaning that if someone walks past it their body heat sets the alarm off. This type of motion sensor design also helps reduce the number of false alarms you might get
                         </p>
                         <div>
                         </div>
@@ -332,12 +332,12 @@
                 <div class="row y-middle">
                     <!-- Device Image -->
                     <div class="col-md-7 text-center m-b-md wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
-                        <img src="images/uploads/Screenshot from 2016-07-07 16:56:04.png" class="dash-left" alt="" style="border-radius: 0px; border: 1px none rgb(105, 105, 110);">
+                        <img src="img/smoke.jpg" class="dash-left" alt="" style="border-radius: 0px; border: 1px none rgb(105, 105, 110);">
                     </div>
                     <!-- Content -->
                     <div class="col-md-5 center-md">
                         <h2 class="m-b-md" src="images/uploads/Screenshot from 2016-07-07 16:56:04.png" style="color: rgb(105, 105, 110); font-size: 30px; font-weight: 900; background-color: rgba(0, 0, 0, 0);">Smoke Detector</h2>
-                        <p>The maple smoke detector detects smoke,and also uses photoelectric detection technology to sense increases in heat as well.</p>
+                        <p>We dont fight fire with fire.We take the fight out of it early.The maple smoke detector detects smoke,and also uses photoelectric detection technology to sense increases in heat as well.These detectors immediately trigger an alarm in the case of fire so that you can react in time and bigger damage can be prevented.It is suitable for use in public and private residential buildings.Self-calibrating, maximum precision for real alarms.It also provides CO detection</p>
                     </div>
                 </div>
                 <!-- /End Row -->
@@ -354,8 +354,8 @@
                         <img src="img/Door.jpg" alt="" style="border-radius: 0px; border: 1px none rgb(105, 105, 110);">
                     </div>
                     <div class="col-md-5 col-md-pull-7 center-md">
-                        <h2 class="m-b-md" src="images/uploads/Screenshot from 2016-07-07 16:58:15.png" style="color: rgb(105, 105, 110); font-size: 30px; font-weight: 900; background-color: rgba(0, 0, 0, 0);">Door and window sensor</h2>
-                        <p>When your system is armed and a door or window is opened,maple Door and Window sensors alert the central monitoring station and inform you immediately.</p>
+                        <h2 class="m-b-md" src="images/uploads/Screenshot from 2016-07-07 16:58:15.png" style="color: rgb(105, 105, 110); font-size: 30px; font-weight: 900; background-color: rgba(0, 0, 0, 0);">Door break sensor</h2>
+                        <p>When your system is armed and a door is opened,maple Door sensors alerts you and inform you immediately.If someone tries to break-in, the contact between door and frame activates and sets the alarm off.Notifications let you know when your home’s entryways have been opened.The installation is very easy.</p>
                     </div>
                 </div>
             </div>
@@ -370,7 +370,7 @@
                     <!-- Content -->
                     <div class="col-md-5 center-md">
                         <h2 class="m-b-md" src="images/uploads/Screenshot from 2016-07-07 16:56:04.png" style="color: rgb(105, 105, 110); font-size: 30px; font-weight: 900; background-color: rgba(0, 0, 0, 0);">LPG gas Detector</h2>
-                        <p>The maple gas detector detects LPG,and also uses photoelectric detection technology to sense increases in heat as well.</p>
+                        <p>The maple gas detector detects LPG,and also uses photoelectric detection technology to sense increases in heat as well.LPG gas alarm system detects the presence of petroleum gas to permissible limits. The limits are controlled by Government statutory bodies. When LPG concentration goes beyond limit to cause breathing trouble or even explosive limit, the unit automatically alarms. The LPG gas alarm unit also comes with a radio module inbuilt that can inform other wireless system receiver (connected to computer or over wifi to mobile) about the gas leakage in your home</p>
                     </div>
                 </div>
                 <!-- /End Row -->
