--- a/products.html
+++ b/products.html
@@ -360,7 +360,7 @@
                 </div>
             </div>
         </section>
-        <section id="content9-1" class="p-y-lg bg-edit content-dashboard content-align-md" src="images/uploads/Screenshot from 2016-07-07 16:56:04.png" style="outline-offset: -3px; background-color: rgb(255, 255, 255);padding-top:0px !important;padding-bottom:0px !important;">
+        <section id="content9-1" class="p-y-lg bg-edit content-dashboard content-align-md" src="images/uploads/Screenshot from 2016-07-07 16:56:04.png" style="outline-offset: -3px; background-color: rgb(255, 255, 255);padding-top:0px !important;padding-bottom:0px !important;border-bottom: 1px solid #F3F3F3;">
             <div class="container">
                 <div class="row y-middle">
                     <!-- Device Image -->
@@ -370,12 +370,25 @@
                     <!-- Content -->
                     <div class="col-md-5 center-md">
                         <h2 class="m-b-md" src="images/uploads/Screenshot from 2016-07-07 16:56:04.png" style="color: rgb(105, 105, 110); font-size: 30px; font-weight: 900; background-color: rgba(0, 0, 0, 0);">LPG gas Detector</h2>
-                        <p>The maple gas detector detects LPG,and also uses photoelectric detection technology to sense increases in heat as well.LPG gas alarm system detects the presence of petroleum gas to permissible limits. The limits are controlled by Government statutory bodies. When LPG concentration goes beyond limit to cause breathing trouble or even explosive limit, the unit automatically alarms. The LPG gas alarm unit also comes with a radio module inbuilt that can inform other wireless system receiver (connected to computer or over wifi to mobile) about the gas leakage in your home</p>
+                        <p>The maple gas detector detects LPG,and also uses photoelectric detection technology to sense increases in heat as well.LPG gas alarm system detects the presence of petroleum gas to permissible limits. The limits are controlled by Government statutory bodies. When LPG concentration goes beyond limit to cause breathing trouble or even explosive limit, the unit automatically alarms. The LPG gas alarm unit also comes with a radio module inbuilt that can inform other wireless system receiver (connected to computer or over wifi to mobile) about the gas leakage in your home.</p>
                     </div>
                 </div>
                 <!-- /End Row -->
             </div>
             <!-- /End Container -->
+        </section>
+        <section id="content10-1" class="p-y-lg content-dashboard content-align-md bg-edit" style="outline-offset: -3px;padding-top:0px !important;padding-bottom:0px !important;">
+            <div class="container">
+                <div class="row features-block y-middle">
+                    <div class="col-md-7 col-md-push-5 text-center m-b-md wow fadeInRight" style="visibility: visible; animation-name: fadeInRight;">
+                        <img src="img/outdoor.jpg" alt="" style="border-radius: 0px; border: 1px none rgb(105, 105, 110);">
+                    </div>
+                    <div class="col-md-5 col-md-pull-7 center-md">
+                        <h2 class="m-b-md" src="images/uploads/Screenshot from 2016-07-07 16:58:15.png" style="color: rgb(105, 105, 110); font-size: 30px; font-weight: 900; background-color: rgba(0, 0, 0, 0);">Outdoor camera</h2>
+                        <p>See more with high definition video & wide dynamic range for clear images during the day or night,Easily mount to walls.It is weatherproof and is suitable for all conditions.Fight back against crime by deterring intruders, safeguarding loved ones & protecting your property by installing maple outdoor security cam.It is perfect for wide angle viewing of large rooms, hallways, lobbies, reception areas, warehouses, showrooms, garages, parking lots etc.</p>
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- =========================
            CONTENT SECTION
