text in outdoor cam changed

--- a/products.html
+++ b/products.html
@@ -385,7 +385,7 @@
                     </div>
                     <div class="col-md-5 col-md-pull-7 center-md">
                         <h2 class="m-b-md" src="images/uploads/Screenshot from 2016-07-07 16:58:15.png" style="color: rgb(105, 105, 110); font-size: 30px; font-weight: 900; background-color: rgba(0, 0, 0, 0);">Outdoor camera</h2>
-                        <p>See more with high definition video & wide dynamic range for clear images during the day or night,Easily mount to walls.It is weatherproof and is suitable for all conditions.Fight back against crime by deterring intruders, safeguarding loved ones & protecting your property by installing maple outdoor security cam.It is perfect for wide angle viewing of large rooms, hallways, lobbies, reception areas, warehouses, showrooms, garages, parking lots etc.</p>
+                        <p>See more with high definition video & wide dynamic range for clear images during the day or night through your mobile phone,Easily mount to walls.It is weatherproof and is suitable for all conditions.Fight back against crime by deterring intruders, safeguarding loved ones & protecting your property by installing maple outdoor security cam.It is perfect for wide angle viewing of large rooms, hallways, lobbies, reception areas, warehouses, showrooms, garages, parking lots etc.</p>
                     </div>
                 </div>
             </div>
